Wed Feb 11 22:00:22 1998  Stephan Kulow  <coolo@kde.org>

	* options.cpp: some fixes

	* options.cpp: several improvments in the layout

Sun Feb  8 22:56:17 1998  Stephan Kulow  <coolo@kde.org>

	* options.cpp: added an extra page to contain the misc options

Fri Jan 16 22:48:33 1998  Stephan Kulow  <coolo@kde.org>

	* desktops.cpp: somehow my kpanel restart magic didn't work
	anymore, so I needed to fix it

Sun Jan 11 13:29:18 1998  Stephan Kulow  <coolo@kde.org>

	* added code to change the location/taskbar (very embarrassing)

	* replaced static KSimpleConfig by dynamic KConfig

	* started maintaing the ChangeLog

	
